--- a/_posts/2021-08-03-welcome.markdown
+++ b/_posts/2021-08-03-welcome.markdown
@@ -4,13 +4,15 @@ title: "Welcome to My Blog"
 subtitle: "The first blog written by me."
 date: 2021-08-03
 author: Rocky Shi
-category: dairy
+category: blog
 tags: blog
 finished: true
 ---
 
 ## Welcome
 
-I created the blog today by using GitHub Pages, Jekyll, Nice Blog Theme.
-
 I hope to use this blog site to record my blogs, reading notes and so on.
+
+## 中文
+
+不出意外应该大部分blog会用中文来写。
